# qurl

./: .gitmodules  Cargo.toml  README.md  qurl.tasks
assets/: ServiceV6_1_9.xsd
crates/async-store/: Cargo.toml
crates/async-store/examples/: simple.rs
crates/async-store/src/: lib.rs
crates/qurl-core/: Cargo.toml
crates/qurl-core/src/: app.rs  lib.rs
crates/qurl-core/src/actions/: mod.rs
crates/qurl-core/src/middlewares/tui/: events.rs  mod.rs
crates/qurl-core/src/state/: mod.rs
crates/qurl-core/src/store/action/: mod.rs
crates/qurl-core/src/store/middleware/tui/: events.rs  mod.rs
crates/qurl-core/src/store/state/: mod.rs
docs/: Search.md
qurl-core/: Cargo.toml
qurl-core/src/: fetch.rs  state.rs
qurl-core/src/ui/: util.rs
qurl-core/src/utils/events/: io.rs  key.rs  mod.rs  ui.rs
testdata/: egko_subway.json  egko_subway.seq.json
tools/: submodules_from_gitmodules.sh
